--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Hello world!!!
+    <h1>Hello world!!!</h1>
+    <h2>Wello horld!</h2>
 </body>
 </html>
